hermes-macros/tests/compile_fail/incorrect_runtime.stderr
error: the `async` keyword is missing from the function declaration
 --> tests/compile_fail/incorrect_runtime.rs:4:1
  |
4 | fn non_async_function() {
  | ^^

error[E0433]: failed to resolve: use of undeclared crate or module `tokio`
 --> tests/compile_fail/incorrect_runtime.rs:3:1
  |
3 | #[hermes_macros::runtime]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared crate or module `tokio`
  |
  = note: this error originates in the attribute macro `hermes_macros::runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this module
  |
1 + use hermes_five::utils::task;
  |

error[E0433]: failed to resolve: use of undeclared crate or module `tokio`
 --> tests/compile_fail/incorrect_runtime.rs:4:25
  |
4 |   fn non_async_function() {
  |  _________________________^
5 | |     // This should fail because the function is not async
6 | | }
  | |_^ use of undeclared crate or module `tokio`
  |
help: consider importing this struct
  |
1 + use std::thread::Builder;
  |

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compile_fail/incorrect_runtime.rs:6:2
  |
6 | }
  |  ^ consider adding a `main` function to `$DIR/tests/compile_fail/incorrect_runtime.rs`
